# opengl-rust-0

./: Cargo.toml
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: entities.rs  main.rs  world.rs
src/drawing/: camera.rs  mod.rs  models.rs  programs.rs  shaders.rs  textures.rs
src/resources/: guro.frag  guro.vert  phong.frag  triangle.frag  triangle.vert
