[package]
name = "opengl-test"
version = "0.1.0"
authors = ["Tetrergeru <41305740+Tetrergeru@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
image = "0.23.12"

[dependencies.gl]
path = "lib/gl"

[dependencies.sdl2]
version = "0.33"
default-features = false
features = ["bundled"]

[features]
gl_debug = ["gl/debug"]